--- a/views/product.ejs
+++ b/views/product.ejs
@@ -84,7 +84,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Loads products -->
-  <script type="module" src="/js/script/load-products.js"></script>
+  <script type="module" src="/script/load-products.js"></script>
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
     &copy; 2025 Mochi Shop. All rights reserved.
