--- a/views/product.ejs
+++ b/views/product.ejs
@@ -114,6 +114,17 @@
     </div>
   </template>
 
+  <!-- Commit alert form -->
+  <div id="orderModal" class="modal" style="display:none;">
+    <div class="modal-content">
+      <span id="orderModalClose" class="modal-close">&times;</span>
+      <h2>Thank you!</h2>
+      <p>Your order has been placed successfully.</p>
+      <button id="orderModalOk">OK</button>
+    </div>
+  </div>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Loads products -->
