--- a/views/product.ejs
+++ b/views/product.ejs
@@ -128,7 +128,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Loads products -->
-  <script type="module" src="/script/load-products.js"></script>
+  <script type="module" src="/script/product-utils.js"></script>
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
