fix(info): all 'my-info' buttons now display pages base on user's role

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -34,7 +34,11 @@
             <li class="nav-item"><a class="nav-link" href="/">Trang chủ</a></li>
             <li class="nav-item"><a class="nav-link" href="/product">Sản phẩm</a></li>
             <li class="nav-item">
-              <a class="nav-link active" href="/admin"><i class="bi bi-cart-fill me-1"></i>Cục mochi dễ hưn >.<</a>
+              <% if (session && session.user.role === 'admin') { %>
+                <a class="nav-link active" href="/admin"><i class="bi bi-cart-fill me-1"></i>My Info</a>
+              <% } else { %>
+                <a class="nav-link active" href="/info"><i class="bi bi-cart-fill me-1"></i>My Info</a>
+              <% } %>
             </li>
             <li class="nav-item"><button class="btn cute-btn me-2">🎁 Khuyến mãi</button></li>
             <li class="nav-item"><button id="yt" class="btn cute-btn danger me-2">▶ YouTube</button></li>
@@ -96,7 +100,7 @@
                 </div>
                 <div class="d-flex flex-wrap gap-2 justify-content-center">
                     <button id="btn-add" class="btn btn-pink">Add</button>
-                    <button id="btn-update" class="btn btn-primary">Update Product</button>
+                    <button id="btn-update" class="btn btn-primary">Update Qty</button>
                     <button id="btn-delete" class="btn btn-outline-danger">Delete</button>
                 </div>
             </div>
