--- a/views/info.ejs
+++ b/views/info.ejs
@@ -39,7 +39,15 @@
             <li class="nav-item"><a class="nav-link" href="/">Trang chủ</a></li>
             <li class="nav-item"><a class="nav-link" href="/product">Sản phẩm</a></li>
             <li class="nav-item">
-              <a id = "info" class="nav-link active" href="/info"><i class="bi bi-cart-fill me-1"></i>My Info</a>
+              <% if (session?.user?.role === 'admin') { %>
+                <a class="nav-link" href="/admin">
+                  <i class="bi bi-cart-fill me-1"></i>My Info
+                </a>
+              <% } else { %>
+                <a class="nav-link" href="/info">
+                  <i class="bi bi-cart-fill me-1"></i>My Info
+                </a>
+              <% } %>
             </li>
             <li class="nav-item"><button id="yt" class="btn cute-btn danger me-2">▶ YouTube</button></li>
             <% if (session && session.user) { %>
